# claude-buddy

./: .env.example  .flake8  .flake8.backup  .gitignore  LICENSE  README.md  badly_linted.py  install-latest.sh  install.sh  pyproject.toml.backup  pyrightconfig.json  requirements.txt  setup.cfg  uninstall.sh
.claude/commands/: buddy-hooks.md
docs/: ARCHITECTURE.md  COMPLETE_SETUP_GUIDE.md  CONTEXT7_MCP_SETUP.md  MCP_INTEGRATION.md  TDD_GUARD_SETUP.md  roadmap.md
src/: package.json  process_timeouts.py  requirements.txt
src/.claude/commands/: debug.md  test.md
src/hooks/: __init__.py  base.py  external_loader.py  logger.py  manager.py  registry.json  unified_logger.py  utils.py
src/hooks/context7_docs/: config.json  hook.py
src/hooks/post_tool_linter/: .flake8  config.json  hook.py  pyproject.toml
src/hooks/post_tool_linter/tests/: __init__.py
src/hooks/tdd_guard/: config.json  hook.py
src/tests/: README.md  __init__.py
src/tools/: __init__.py
src/tools/concurrency/: __init__.py  concurrency.py  config.json
src/tools/concurrency/tests/: __init__.py
