[metadata]
name = claude-buddy-post-tool-linter
version = 1.0.0
description = Post-tool linter for Claude Buddy

[options]
python_requires = >=3.12

[flake8]
# Duplicate of .flake8 for compatibility
max-line-length = 88
extend-ignore = E203, E266, E501, W503
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist,.eggs,*.egg,.tox,.venv,.claude

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*

[coverage:run]
source = .
omit = 
    */__pycache__/*
    */tests/*
    */.venv/*
    */.tox/*
    */dist/*
    */build/*